[package]
name = "tiny-itoa"
description = "no_std implementation of integer to decimal string"
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Lohann/tiny-itoa.git"
homepage = "https://github.com/Lohann/tiny-itoa"
authors = ["Lohann Paterno Coutinho Ferreira <developer@lohann.dev>"]

[dependencies]
